--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="nav-link" href="#">Resources</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="aboutUs.html">About us</a>
                   </li>
                 </ul>
                 
@@ -86,7 +86,7 @@
                 and see your blog's impact on sales.</p>
             <form>
                 <input type="email" placeholder="Enter email address"/>
-                <button type="submit">
+                <button type="submit" class="texto-boton">
                     Try it now &rarr;
                 </button>
             </form>    
